fix: overflow fix

--- a/src/components/HomePage/MainPicture/styles.scss
+++ b/src/components/HomePage/MainPicture/styles.scss
@@ -16,11 +16,11 @@
 .picture-desc{
     position: absolute;
     display: block;
-    width: 100%;
+    width: fit-content;
     color: #01a683;
     bottom: 25px;
     left: 015px;
-    padding: 0.5rem;
+    padding: 0 0 0.5rem 0.5rem;
     font-size: 0.8rem;
     font-weight: bold;
     line-height: 1.35;
